<resources>
    <string name="app_name">Appposkod</string>
    <string name="logo_provinsi">Logo Provinsi</string>
    <string name="nama_provinsi">Nama Provinsi</string>
    <string name="digit_placeholder">000</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="luas_wilayah">Luas Wilayah</string>
    <string name="digit_placeholder_2">000 km2</string>
    <string name="home">Beranda</string>
    <string name="about">Tentang</string>
    <string name="tombol_filter">Tombol Filter</string>
    <string name="app_description">Appposkod adalah aplikasi yang dapat digunakan untuk mencari kode pos di wilayah negara Indonesia. Dataset didapatkan dari situs Kaggle dalam bentuk CSV yang diunggah oleh Rayhan Lahdji pada tahun 2021. Data yang digunakan belum mencakup pemekaran pada wilayah Papua. Lambang, peta, dan teks informasi terkait provinsi didapatkan dari situs Wikipedia.</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="app_purpose">Aplikasi ini dibuat sebagai submission akhir dari kelas \"Belajar Membuat Aplikasi Android untuk Pemula\" di platform Dicoding. Aplikasi ini menerapkan beberapa ilmu yang sudah dipelajari pada kelas tersebut, seperti Activity, Intent, View, RecyclerView, Layout, Image, dan lain-lain.</string>
    <string name="tentang_pengembang">Profil Pengembang</string>
    <string name="developer_email_address">joseagustian37@gmail.com</string>
    <string name="email_pengembang">Alamat Email</string>
    <string name="jose_agustian">Jose Agustian</string>
    <string name="foto_pengembang">Foto Pengembang</string>
    <string name="github">GitHub</string>
    <string name="url_github_dev">https://github.com/joseagustian</string>
    <string name="versi_aplikasi">Versi Aplikasi</string>
    <string name="version">Versi 1.0 (2024)</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="tombol_kembali">Tombol Kembali</string>
    <string name="peta_provinsi">Peta Provinsi</string>
    <string name="text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="population_placeholder">x.xxx.xxx jiwa (2020)</string>
    <string name="nama_kabupaten">Nama Kabupaten</string>
    <string name="placeholder_kode_wilayah_kabupaten">00.00</string>
    <string name="kode_wilayah">Kode Wilayah</string>
    <string name="choose_regency">— Pilih Kabupaten —</string>
    <string name="choose_subdistrics">— Pilih Kecamatan —</string>
    <string name="nama_kecamatan">Nama Kecamatan</string>
    <string name="placeholder_kode_wilayah_kecamatan">00.00.000</string>
    <string name="search_subdistric">Cari Kecamatan</string>
    <string name="daftar_kelurahan">Daftar Kelurahan</string>
    <string name="search_ward">Cari Kelurahan</string>
    <string name="nama_kelurahan">Nama Kelurahan</string>
    <string name="placeholder_kode_wilayah_kelurahan">00.00.00.0000</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="placeholder_kode_pos">00000</string>
    <string name="memuat_data_kelurahan">Memuat Data Kelurahan…</string>
    <string name="memuat_data_kecamatan">Memuat Data Kecamatan…</string>
    <string name="choose_province">— Pilih Provinsi —</string>
    <string name="button_clipboard">Tombol Salin Informasi</string>
</resources>