<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    app:cardBackgroundColor="#F2F2F2"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="false"
    android:clipChildren="true"
    android:clipToPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_developer_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:padding="12dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_developer_profile"
            android:layout_width="117dp"
            android:layout_height="117dp"
            android:contentDescription="@string/foto_pengembang"
            app:srcCompat="@drawable/developer_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedRectangleShape" />

        <TextView
            android:id="@+id/txt_developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jose_agustian"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_developer_profile" />

        <TextView
            android:id="@+id/txt_lbl_email_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_pengembang"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/txt_developer_name"
            app:layout_constraintStart_toStartOf="@id/txt_developer_name" />

        <TextView
            android:id="@+id/txt_email_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_email_address"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/txt_lbl_email_dev"
            app:layout_constraintStart_toStartOf="@id/txt_lbl_email_dev" />

        <TextView
            android:id="@+id/txt_lbl_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/github"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/txt_email_dev"
            app:layout_constraintStart_toStartOf="@id/txt_email_dev" />

        <TextView
            android:id="@+id/txt_github_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_github_dev"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/txt_lbl_github"
            app:layout_constraintStart_toStartOf="@id/txt_lbl_github" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
