<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="5dp"
    android:clipChildren="true"
    android:clipToPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:padding="5dp">

        <TextView
            android:id="@+id/txt_nama_kelurahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_kelurahan"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageButton
            android:id="@+id/btn_clipboard"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/white"
            android:layout_marginEnd="15dp"
            app:tint="#233546"
            android:contentDescription="@string/button_clipboard"
            app:srcCompat="@drawable/baseline_content_copy_24"
            app:layout_constraintTop_toTopOf="@id/txt_nama_kelurahan"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_lbl_kode_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_pos"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/txt_nama_kelurahan"
            app:layout_constraintTop_toBottomOf="@id/txt_nama_kelurahan" />

        <TextView
            android:id="@+id/txt_kode_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_kode_pos"
            android:paddingBottom="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txt_lbl_kode_pos"
            app:layout_constraintStart_toStartOf="@id/txt_lbl_kode_pos"/>

        <TextView
            android:id="@+id/txt_lbl_kode_wilayah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_wilayah"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/txt_kode_wilayah_kelurahan"
            app:layout_constraintTop_toTopOf="@id/txt_lbl_kode_pos"
            android:layout_marginEnd="15dp" />

        <TextView
            android:id="@+id/txt_kode_wilayah_kelurahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_kode_wilayah_kelurahan"
            android:paddingBottom="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_kode_pos"
            android:layout_marginEnd="15dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
