<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/about_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:layout_marginBottom="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/lbl_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tentang_aplikasi"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#414040"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_app_logo"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_app_name"
                app:srcCompat="@drawable/app_logo_w_text" />

            <TextView
                android:id="@+id/lbl_app_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_description"
                android:textSize="12sp"
                android:paddingHorizontal="15dp"
                android:justificationMode="inter_word"
                android:textStyle="bold"
                android:textColor="#414040"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_app_logo" />

            <TextView
                android:id="@+id/lbl_app_purpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_purpose"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:justificationMode="inter_word"
                android:textStyle="bold"
                android:textColor="#414040"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_app_description" />

            <TextView
                android:id="@+id/lbl_app_developer_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tentang_pengembang"
                android:layout_marginTop="35dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#414040"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_app_purpose" />

            <include
                android:id="@+id/card_developer_info"
                layout="@layout/item_developer_info_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:elevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_app_developer_info"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/lbl_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/versi_aplikasi"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#414040"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_developer_info"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/txt_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/version"
                android:textSize="12sp"
                android:textColor="#414040"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_app_version" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>