<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="5dp"
    android:clipChildren="true"
    android:clipToPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_subDistrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:padding="5dp">

        <TextView
            android:id="@+id/txt_nama_kecamatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_kecamatan"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_lbl_kode_wilayah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_wilayah"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/txt_nama_kecamatan"
            app:layout_constraintTop_toBottomOf="@id/txt_nama_kecamatan" />

        <TextView
            android:id="@+id/txt_kode_wilayah_kecamatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_kode_wilayah_kecamatan"
            android:paddingBottom="10dp"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/txt_lbl_kode_wilayah"
            app:layout_constraintStart_toStartOf="@id/txt_lbl_kode_wilayah"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
